# zbus-fallible-property

client/: Cargo.toml
client/src/: main.rs  zbus_greeter.rs
server/: Cargo.toml
server/src/: macro.rs  main.rs
